[package]
name = "wgpu-objc2-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.bundle]
identifier = "com.example.wgpu-objc2-example"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "28.0"
pollster = "0.4.0"
bytemuck = "1.16.1"

block2 = "0.6.2"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-metal-kit = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
objc2-ui-kit = "0.3.2"

[features]
# Redraw immediately when resizing or when stepping.
immediate-redraw = []

# Set the view as needing display immediately after drawing.
queue-display = []

# Trigger `drawRect:` instead of `updateLayer`.
#
# Only relevant in AppKit - this is always enabled when using UIKit.
draw-rect = []

# Request redraws using `CADisplayLink`.
display-link = []

# Disable VSync (i.e. use `wgpu::PresentMode::Immediate`).
no-vsync = []

# Show two triangles side by side instead of just one.
two-triangles = []

# Use `MTKView` instead of `NSView` or `UIView` as the superclass of our triangle view.
mtkview = []

# Use in-development `wgpu` with breaking changes.
wgpu-unstable = []

# Uncomment the below and run `cargo update` to use a development version of wgpu.
default = ["wgpu-unstable"]
[patch.crates-io]
wgpu = { git = "https://github.com/madsmtm/wgpu", rev = "6ff5d5d8a28e35d7e5cbb9ad128f6808d2a11ff6" }

[profile.dev.package.objc2]
debug-assertions = false
